--- a/workflows/azure-infra-cicd.yml
+++ b/workflows/azure-infra-cicd.yml
@@ -5,7 +5,7 @@ on:
       AZURE_REGION: 
         description: 'Azure Region to deploy Azure resources'
         required: true    
-        default: 'azure-region'  
+        default: 'eastus'  
       ENVIRONMENT_TYPE: 
         description: 'Environment: dev, test, or prod'
         required: true
@@ -13,19 +13,19 @@ on:
       APP_NAME_PREFIX: 
         description: 'Prefix to be used in naming Azure resources'
         required: true
-        default: 'prefix'
+        default: 'az-swa'
       RESOURCE_GROUP_NAME: 
         description: 'Resource Group to deploy Azure resources'
         required: true
-        default: 'resource-group'
+        default: 'serverlesswebapp_rg'
       MSI_NAME: 
         description: 'User Managed Identity'
         required: true
-        default: 'user-msi'
+        default: 'user-swa-msi'
       MSI_RESOURCE_GROUP: 
         description: 'Resource Group where User Managed Identity is located'
         required: true
-        default: 'msi-resource-group'
+        default: 'msi_rg'
   
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
